package packege;

public interface Aggregate {
    public Iterator getIterator();
}
